--- a/test/cdn-link.html
+++ b/test/cdn-link.html
@@ -21,6 +21,6 @@
 		};
 		</code></pre>
 
-    <script src="https://cdn.jsdelivr.net/gh/vespaiach/prismjs-loader@master/dist/prismjs-loader-1.0.0.js" defer class="dark: prism-coy funky"></script>
+    <script src="https://cdn.jsdelivr.net/gh/vespaiach/prismjs-loader@1.0.1/dist/prismjs-loader.js" defer class="dark: prism-coy funky"></script>
   </body>
 </html>
