--- a/test/cdn-link.html
+++ b/test/cdn-link.html
@@ -23,8 +23,9 @@
 		};
 		</code></pre>
 
-		<script src="https://cdn.jsdelivr.net/gh/vespaiach/highlight-it@2.0.0/dist/highlight-it.js" defer
-				class="dark: prism-coy funky"></script>
+		<script src="https://cdn.jsdelivr.net/gh/vespaiach/highlight-it@main/dist/highlight-it.js"
+				integrity="sha384-zh0jk0z2/k745j30lRgmEzY6xGUxkwsJ4l37MZe1nmQR7yLDhM8n4m+G8ct7ZAyu"
+				crossorigin="anonymous"></script>
 	</body>
 
 </html>
