--- a/test/e2e/cdn-link.html
+++ b/test/e2e/cdn-link.html
@@ -23,7 +23,7 @@
 		</code></pre>
 
         <script
-            src="https://cdn.jsdelivr.net/gh/vespaiach/highlight-it@main/dist/highlight-it.js?pack=complete"
+            src="https://cdn.jsdelivr.net/gh/vespaiach/highlight-it@main/dist/highlight-it-2.0.0.js?pack=complete"
             crossorigin="anonymous"></script>
     </body>
 </html>
