--- a/test/e2e/config-packs-demo.html
+++ b/test/e2e/config-packs-demo.html
@@ -81,6 +81,6 @@ const createUser = (data: Partial&lt;User&gt;): User => {
         </div>
 
         <!-- Using the complete configuration pack -->
-        <script src="../dist/highlight-it.js?theme=atom-dark" defer></script>
+        <script src="../dist/highlight-it-2.0.0.js?theme=atom-dark" defer></script>
     </body>
 </html>
