--- a/test/e2e/highlight-it-auto-dark-mode.html
+++ b/test/e2e/highlight-it-auto-dark-mode.html
@@ -238,6 +238,6 @@ echo "Deployment completed successfully!"
         </script>
 
         <!-- Load highlight-it with complete pack and auto dark mode detection -->
-        <script src="../dist/highlight-it.js?darkMode=dark&verbose=true"></script>
+        <script src="../dist/highlight-it-2.0.0.js?darkMode=dark&verbose=true"></script>
     </body>
 </html>
