--- a/test/e2e/highlight-it-dark-mode-test.html
+++ b/test/e2e/highlight-it-dark-mode-test.html
@@ -105,6 +105,6 @@ console.log(greetUser(user));
         </div>
 
         <!-- Load highlight-it with minimal pack and dark mode enabled -->
-        <script src="../dist/highlight-it.js?darkmode=twilight&verbose=true"></script>
+        <script src="../dist/highlight-it-2.0.0.js?darkmode=twilight&verbose=true"></script>
     </body>
 </html>
