--- a/test/e2e/highlight-it-params-test.html
+++ b/test/e2e/highlight-it-params-test.html
@@ -117,6 +117,6 @@ print(quicksort([3, 6, 8, 10, 1, 2, 1]))
         </script>
 
         <!-- Load highlight-it with complete pack and dark mode -->
-        <script src="../dist/highlight-it.js?theme=coy&darkmode=dark"></script>
+        <script src="../dist/highlight-it-2.0.0.js?theme=coy&darkmode=dark"></script>
     </body>
 </html>
