--- a/test/e2e/highlight-js-test.html
+++ b/test/e2e/highlight-js-test.html
@@ -65,7 +65,7 @@ if __name__ == "__main__":
 </code></pre>
         </div>
 
-        <!-- Load local built highlight-it.js -->
-        <script src="../../dist/highlight-it.js?engine=highlight&theme=atom-one-dark&verbose=true"></script>
+        <!-- Load local built highlight-it-2.0.0.js -->
+        <script src="../../dist/highlight-it-2.0.0.js?engine=highlight&theme=atom-one-dark&verbose=true"></script>
     </body>
 </html>
