--- a/test/e2e/hightlight-jsx-with-default-theme.html
+++ b/test/e2e/hightlight-jsx-with-default-theme.html
@@ -27,6 +27,6 @@
 		 }
 		 </code></pre>
 
-        <script src="../dist/highlight-it.js" defer></script>
+        <script src="../dist/highlight-it-2.0.0.js" defer></script>
     </body>
 </html>
